--- a/src/stylesheets/pages/_anfahrt.scss
+++ b/src/stylesheets/pages/_anfahrt.scss
@@ -9,11 +9,20 @@
   overflow-y: auto;
   display: flex;
   flex-direction: column;
+  box-shadow: $box-shadow-inset;
   @include mdc-notched-outline-color($color-background-dark);
+
+  @include sm {
+    padding: 2rem;
+  }
+  @include md {
+    padding: 2rem;
+  }
 
   &__map {
     width: 100%;
     height: 100%;
+    background-image: url('../assets/images/anfahrt_placeholder.png');
     border: none;
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
@@ -25,5 +34,7 @@
 
   &__placeholder {
     position: absolute;
+    width: 100%;
+    height: 100%;
   }
 }
