--- a/src/stylesheets/pages/_home.scss
+++ b/src/stylesheets/pages/_home.scss
@@ -12,4 +12,8 @@ html {
   height: 100%;
   width: 90%;
   border-radius: $border-radius-main;
+  box-shadow: $box-shadow-inset;
+  background-image: url('../assets/images/img_back_home_placeholder2.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
