--- a/src/stylesheets/components/_card.scss
+++ b/src/stylesheets/components/_card.scss
@@ -35,6 +35,7 @@
   &__title {
     font-size: 2rem;
     line-height: 1;
+    white-space: nowrap;
     padding-top: 2rem;
     margin-left: 2rem;
     width: min-content;
