--- a/src/stylesheets/components/_card.scss
+++ b/src/stylesheets/components/_card.scss
@@ -30,7 +30,7 @@
 .product-card-header {
   height: 30%;
   width: 100%;
-  background-color: $color-background-dark;
+  background-color: $color-cards-and-header;
 
   &__title {
     font-size: 2rem;
