--- a/src/stylesheets/layout/_header.scss
+++ b/src/stylesheets/layout/_header.scss
@@ -2,7 +2,7 @@
   position: absolute;
   right: 10rem;
   top: 20%;
-  background-color: $color-background-dark;
+  background-color: $color-cards-and-header;
   color: $color-main;
   text-align: center;
   border-radius: $border-radius-main;
