--- a/src/stylesheets/components/_super-user.scss
+++ b/src/stylesheets/components/_super-user.scss
@@ -1,12 +1,12 @@
 .super-user {
   width: 100%;
   height: 5rem;
-  background-color: $color-main;
+  background-color: $color-background-bright;
   z-index: 800;
   display: flex;
   position: fixed;
   top: 0;
-  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.75); 
 
   &__info {
     display: flex;
