--- a/src/stylesheets/pages/_home.scss
+++ b/src/stylesheets/pages/_home.scss
@@ -27,6 +27,7 @@ html {
     left: 0;
     border-radius: $border-radius-main;
     box-shadow: $box-shadow-inset;
+    animation: fadein 5s linear;
   }
 
   &__video {
@@ -36,5 +37,17 @@ html {
     height: auto;
     pointer-events: none;
     object-fit: contain;
+  }
+}
+
+@keyframes fadein {
+  0% {
+    background: $color-main;
+  }
+  20% {
+  background: rgba(58, 49, 49, 0.8);
+  }
+  100% {
+   background: rgba(58, 49, 49, 0.34);
   }
 }
