--- a/src/stylesheets/layout/_background.scss
+++ b/src/stylesheets/layout/_background.scss
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: left;
   align-items: center;
-  background-image: url('../assets/images/playarea-back.svg');
+  background-image: url('../assets/icons/woodback.svg'); 
   @include sm {
     margin: 1rem;
     height: calc(100vh - 2rem);
