--- a/src/stylesheets/components/_card.scss
+++ b/src/stylesheets/components/_card.scss
@@ -31,6 +31,8 @@
   height: 30%;
   width: 100%;
   background-color: $color-cards-and-header;
+  border-radius: $border-radius-main;
+  box-shadow: inset 7px 7px 9px -7px rgba(0, 0, 0, 0.4),inset -7px 0 9px -7px rgba(0,0,0,0.4);
 
   &__title {
     font-size: 2rem;
@@ -50,11 +52,11 @@
     width: 90%;
     top: 16%;
     right: 5%;
-    border-radius: $border-radius-main;
 
     & img {
       max-width: 100%;
       max-height: 115%;
+      border-radius: $border-radius-main;
     }
   }
 }
